Align header text - Exercice 3

--- a/estilo.css
+++ b/estilo.css
@@ -75,6 +75,7 @@ body{
 
 /* EXERCÍCIO 3: cabeçalho da página */
 #cabecalho-pagina {
+  padding: 10px;
 }
 
 #cabecalho-pagina h1 {
@@ -82,6 +83,7 @@ body{
   font-size: 36px;
   color: #e90c0c;
   font-weight: normal;
+  text-align: center;
 }
 
 #cabecalho-pagina h2 {
@@ -89,6 +91,7 @@ body{
   font-size: 24px;
   color: #333;
   font-weight: normal;
+  text-align: right;
 }
 
 /* EXERCÍCIO 4: cada item do menu */
