Use flexbox in 'cardapio' - Exercice 4

--- a/estilo.css
+++ b/estilo.css
@@ -97,6 +97,9 @@ body{
 
 /* EXERCÍCIO 4: cada item do menu */
 article {
+  display: flex;
+  justify-content: space-between;
+  line-height: 2em;
 }
 
 /* EXERCÍCIO 5: o rodapé */
