Fix image positioning in sidebar - Exercice 6

--- a/estilo.css
+++ b/estilo.css
@@ -111,6 +111,9 @@ article {
 
 /* EXERCÍCIO 6: lateral */
 #lateral {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 /* EXERCÍCIO 7: o ticket */
