Fix exercice 6 - Add padding-top in sidebar

--- a/estilo.css
+++ b/estilo.css
@@ -114,6 +114,7 @@ article {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding-top: 17px;
 }
 
 /* EXERCÍCIO 7: o ticket */
